tests/fail/semantics/field_access_requires_structured_type/main.kira
@Main
function entry() {
    let value = 1
    print(value.x)
    return
}
